# Property-Booking-System

./: .gitignore  README.md  build.sh  manage.py  package-lock.json  prod.db.sqlite3  pyproject.toml  requirements.txt  setup_db.py
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/properties/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/properties/migrations/: 0001_initial.py  0002_remove_property_bathroom_remove_property_beds_and_more.py  0004_property_user.py  0005_property_image.py
backend/user/: admin.py  models.py  serializers.py  urls.py
front-end/: package-lock.json  package.json
front-end/public/: index.html
front-end/src/: App.css  App.jsx  axios.js  index.js
front-end/src/Details/: details.jsx  fetch.jsx
front-end/src/Footer/: footer.jsx
front-end/src/Home/: cards.jsx  home.jsx
front-end/src/Layout/: layout.jsx
front-end/src/Loader/: loader.jsx
front-end/src/Login/: login.jsx
front-end/src/Navbar/: navbar.jsx
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.jsx  axios.js  cookie.jsx
frontend/src/404/: NotFound.jsx
hotel-rental/: settings.py  urls.py
hotel_rental/: asgi.py  settings.py  wsgi.py
media/images/: default.avif
properties/: urls.py  views.py
properties/migrations/: 0003_amenities_property.py
static/css/: main.d3cdded6.css  main.d3cdded6.css.map
static/js/: main.dc491660.js  main.dc491660.js.LICENSE.txt  main.dc491660.js.map
user/: forms.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_userdata_username.py
(+8 files in other folders)
