[tool.poetry]
name = "house-rental"
version = "0.1.0"
description = "working model"
authors = ["Aryan Amish"]
readme = "README.md"
packages = [{include = "house_rental"}]

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.6.0"
django = "4.1.7"
django-cors-headers = "3.13.0"
djangorestframework = "3.14.0"
pillow = "9.4.0"
pytz = "2022.7.1"
sqlparse = "0.4.3"
tzdata = "2022.7"
python-decouple = "3.4"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
